# hpy

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  release_notes.md  requirements.txt  setup.py  to_pypi.sh
docs/: conf.py  hpy.rst  index.rst  tests.rst
docs/source/: conf.py
documentation/: .buildinfo  genindex.html  hpy.ds.html  hpy.entry_points.html  hpy.html  hpy.ipython.html  hpy.main.html  hpy.modelling.html  hpy.plotting.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
documentation/.doctrees/: environment.pickle  hpy.doctree  hpy.ds.doctree  hpy.entry_points.doctree  hpy.ipython.doctree  hpy.main.doctree  hpy.modelling.doctree  hpy.plotting.doctree  index.doctree  modules.doctree
documentation/_sources/: hpy.modelling.rst.txt  index.rst.txt
hhpy/: __init__.py  __version__.py  ds.py  entry_points.py  ipython.py  main.py  modelling.py  plotting.py  regression.py
hhpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hhpy/ds/: df_mapping.py  main.py
hhpy/ipython/: ipython.py
hhpy/iternals/: __init__.py  constants.py  docstring_processor.py  dtype_mapping.py
hhpy/main/: __init__.py  base_class.py  main.py
hhpy/modelling/: main.py
hhpy/plotting/: __init__.py  anim.py  plotting_internals.py  plotting_main.py
hhpy/regression/: regression.py
hpy/: __init__.py  __version__.py  ds.py  entry_points.py  ipython.py  main.py  modelling.py  plotting.py
hpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sphinx/: .python-version  build.sh  build.txt  conf.py  examples.rst  index.rst  modules.rst  quickstart.rst  requires.txt
sphinx/_build/doctrees/: environment.pickle  index.doctree
sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx/_static/: example_facet_wrap.html
sphinx/api/: hhpy.ds.DFMapping.rst  hhpy.ds.acc.rst  hhpy.ds.butter_pass_filter.rst  hhpy.ds.change_span.rst  hhpy.ds.cm.rst  hhpy.ds.col_to_front.rst  hhpy.ds.corr.rst  hhpy.ds.df_count.rst  hhpy.ds.df_p.rst  hhpy.ds.df_rmsd.rst  hhpy.ds.df_score.rst  hhpy.ds.df_split.rst  hhpy.ds.drop_duplicate_cols.rst  hhpy.ds.drop_duplicate_indices.rst  hhpy.ds.drop_zero_cols.rst  hhpy.ds.f1_pr.rst  hhpy.ds.f_score.rst  hhpy.ds.get_df_corr.rst  hhpy.ds.get_duplicate_cols.rst  hhpy.ds.get_duplicate_indices.rst  hhpy.ds.highlight_max.rst  hhpy.ds.highlight_max_min.rst  hhpy.ds.highlight_min.rst  hhpy.ds.k_split.rst  hhpy.ds.lfit.rst  hhpy.ds.mae.rst  hhpy.ds.mahalanobis.rst  hhpy.ds.medae.rst  hhpy.ds.optimize_pd.rst  hhpy.ds.outlier_to_nan.rst  hhpy.ds.pass_by_group.rst  hhpy.ds.qf.rst  hhpy.ds.quantile_split.rst  hhpy.ds.r2.rst  hhpy.ds.rel_acc.rst  hhpy.ds.remove_unused_categories.rst  hhpy.ds.rmsd.rst  hhpy.ds.rmse.rst  hhpy.ds.stdae.rst  hhpy.ds.top_n.rst  (+242 more)
sphinx/rst/: conf.py  hpy.ds.rst  hpy.entry_points.rst  hpy.ipython.rst  hpy.main.rst  hpy.plotting.rst  hpy.rst  index.rst  modules.rst
tests/: __init__.py  conftest.py  test_ds.py
tests/files/: testdata_jp.xlsx  testdata_jp_dfmapping.xlsx
