[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hhpy"
version = "0.3.1"
authors = [
  { name="Henrik Hanssen", email="rhedak00@yahoo.de" },
]
description = "Convenient Data Science"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rhedak/hhpy"
